--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -23,14 +23,14 @@
                 <div class="padded-full">
 
                     <div class="row text-center">
-                        <div class="phone-2 column">&nbsp;</div>
-                        <div class="phone-8 column">
+                        <div class="phone-3 column">&nbsp;</div>
+                        <div class="phone-6 column">
                             <div class="padded-full text-center profile-picture-container">
                                 <img src="img/dummy-profile.jpg" width="100%" class="profile-picture" />
                                 <a class="profile-edit profile-edit-icon" data-navigation="page-profile-edit"><i class="icon icon-edit"></i></a>
                             </div>
                         </div>
-                        <div class="phone-2 column">&nbsp;</div>
+                        <div class="phone-3 column">&nbsp;</div>
                     </div>
 
                     <div class="padded-bottom"></div>
@@ -61,37 +61,67 @@
                         </li>
                     </ul>
                     
-                    <div class="row text-center">
+                    <div class="row text-center row-border-bottom">
+                        <div class="phone-4 column column-border-right">
+                            <div class="padded-full">
+                                <div class="grid-action">
+                                    <img src="img/icons/icon-profile.png" />
+                                    <div class="label">
+                                        User
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="phone-4 column column-border-right">
+                            <div class="padded-full">
+                                <div class="grid-action">
+                                    <div class="label">
+                                        <img src="img/icons/icon-alcatel.png" />
+                                        activated
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="phone-4 column">
                             <div class="padded-full">
-                                A
-                            </div>
-                        </div>
-                        <div class="phone-4 tablet-6 column">
-                            <div class="padded-full">
-                                B
-                            </div>
-                        </div>
-                        <div class="phone-4 tablet-6 column">
-                            <div class="padded-full">
-                                C
+                                <div class="grid-action">
+                                    <img src="img/icons/icon-cloud.png" />
+                                    <div class="label">
+                                        4.6gb free
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="row text-center">
+                        <div class="phone-4 column column-border-right">
+                            <div class="padded-full">
+                                <div class="grid-action">
+                                    <img src="img/icons/icon-giftcard.png" />
+                                    <div class="label">
+                                        My vouchers
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="phone-4 column column-border-right">
+                            <div class="padded-full">
+                                <div class="grid-action">
+                                    <img src="img/icons/icon-comment.png" />
+                                    <div class="label">
+                                        Feedback
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="phone-4 column">
                             <div class="padded-full">
-                                A
-                            </div>
-                        </div>
-                        <div class="phone-4 tablet-6 column">
-                            <div class="padded-full">
-                                B
-                            </div>
-                        </div>
-                        <div class="phone-4 tablet-6 column">
-                            <div class="padded-full">
-                                C
+                                <div class="grid-action">
+                                    <img src="img/icons/icon-money.png" />
+                                    <div class="label">
+                                        Redeem Alcapoints
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
