--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="phone-4 column">
                             <div class="padded-full">
-                                <div class="grid-action">
+                                <div class="grid-action" data-action="external-app">
                                     <img src="img/icons/icon-cloud.png" />
                                     <div class="label">
                                         4.6gb free
