--- a/www/index.html
+++ b/www/index.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="phone-4 column">
                             <div class="padded-full">
-                                <div class="grid-action">
+                                <div class="grid-action" data-action="external-app">
                                     <img src="img/icons/icon-cloud.png" />
                                     <div class="label">
                                         4.6gb free
@@ -132,6 +132,8 @@
 
         <page-profile-edit data-page="true"></page-profile-edit>
         
+        <script src="cordova.js"></script>
+        <script src="js/startApp.js"></script>
         <script src="js/phonon.js"></script>
 
         <script src="js/app.js"></script>
