--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -132,6 +132,8 @@
 
         <page-profile-edit data-page="true"></page-profile-edit>
         
+        <script src="cordova.js"></script>
+        <script src="js/startApp.js"></script>
         <script src="js/phonon.js"></script>
 
         <script src="js/app.js"></script>
